v0.1.6 — full-size panel: slide inventory left, panel below effects, recipe book auto-close
Tight-space redesign per Astro: instead of shrinking the panel (too small),
the inventory slides left to give the full-size panel room, and the panel
drops below the potion-effect stack (effects render wide again). Opening the
panel auto-closes the recipe book once; if the user re-opens it, that's
respected and the ensemble shrink handles the width instead.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>