@@ -28,19 +28,26 @@ public final class EnderPanelClient {
 	public static final float ANCHOR_X = EnderPocketLayout.PANEL_REL_X;
 	public static final float ANCHOR_Y = EnderPocketLayout.PANEL_REL_Y + EnderPocketLayout.PANEL_H / 2.0f;
 
-	/** Horizontal room reserved for the compact potion-effect strip (32px + gap). */
-	public static final int EFFECTS_STRIP_OFFSET = 34;
+	/** Where the effect stack starts (below the button) and its per-effect step. */
+	public static final int EFFECTS_TOP = 26;
+	public static final int EFFECT_STEP = 33;
 
 	private static boolean open;
 	// Screen (ensemble) transform: scale + offset, pivot = screen centre.
+	// Also used translate-only (scale 1) to slide the inventory left when the
+	// full-size panel needs room on the right.
 	private static float scrScale = 1.0f;
 	private static float scrTx;
 	private static float scrTy;
-	// Panel-only transform: translate right (to clear the effect strip), then
-	// scale about the anchor point.
+	// Panel-only transform: drop below the potion-effect stack, then scale
+	// about the anchor point.
 	private static float panScale = 1.0f;
-	private static float panTx;
+	private static float panTy;
 	private static long lastMs = -1L;
+	// Recipe book handling: auto-closed once when the panel opens; if the user
+	// re-opens it, respect that (fall back to the ensemble shrink) until the
+	// screen closes.
+	private static boolean bookRespected;
 
 	/** Untransformed mouse position, kept for tooltip anchoring and the entity renderer. */
 	public static int rawMouseX;
@@ -59,8 +66,17 @@ public final class EnderPanelClient {
 		scrTx = 0.0f;
 		scrTy = 0.0f;
 		panScale = 1.0f;
-		panTx = 0.0f;
+		panTy = 0.0f;
 		lastMs = -1L;
+		bookRespected = false;
+	}
+
+	public static boolean isBookRespected() {
+		return bookRespected;
+	}
+
+	public static void respectBook() {
+		bookRespected = true;
 	}
 
 	public static boolean serverSupported() {
@@ -100,35 +116,43 @@ public final class EnderPanelClient {
 	 * {@code recipeSideBySide} must be false when the recipe book is closed OR
 	 * overlaying the GUI in width-too-narrow mode.
 	 */
-	public static void updateAnim(int width, int height, int leftPos, boolean recipeSideBySide, boolean effectsActive) {
+	public static void updateAnim(int width, int height, int leftPos, int topPos, boolean bookVisible, int effectsCount) {
 		float tScrScale = 1.0f;
 		float tScrTx = 0.0f;
 		float tScrTy = 0.0f;
-		float tPanScale = 1.0f;
-		float tPanTx = 0.0f;
+		float tPanTy = 0.0f;
 		if (open) {
-			// With active potion effects the panel steps right so the compact
-			// effect strip keeps its spot next to the GUI.
-			int panelRelX = EnderPocketLayout.PANEL_REL_X + (effectsActive ? EFFECTS_STRIP_OFFSET : 0);
-			tPanTx = effectsActive ? EFFECTS_STRIP_OFFSET : 0.0f;
-			if (recipeSideBySide) {
-				// Ensemble shrink around the screen centre; panel stays full-size
-				// within the ensemble.
+			// With active potion effects the panel drops below the effect stack
+			// (which starts under the button and steps down per effect).
+			if (effectsCount > 0) {
+				int effectsHeight = effectsCount <= 5 ? effectsCount * EFFECT_STEP : 132 + 32;
+				tPanTy = Math.max(0, EFFECTS_TOP + effectsHeight + 4 - EnderPocketLayout.PANEL_REL_Y);
+			}
+
+			int rightOverflow = leftPos + EnderPocketLayout.PANEL_REL_X + EnderPocketLayout.PANEL_W + 4 - width;
+			float panelBottom = topPos + EnderPocketLayout.PANEL_REL_Y + tPanTy + EnderPocketLayout.PANEL_H;
+			boolean verticalOk = panelBottom <= height - 2;
+			if (!bookVisible && rightOverflow <= 0 && verticalOk) {
+				// Fits detached at full size — nothing moves.
+			} else if (!bookVisible && verticalOk && leftPos - rightOverflow >= 4) {
+				// Slide the inventory left just enough for the full-size panel.
+				tScrTx = -rightOverflow;
+			} else {
+				// Ensemble shrink around the screen centre: recipe book kept open
+				// by the user, inventory can't slide far enough, or the panel
+				// would run off the bottom. Everything scales in place.
 				float cx = width / 2.0f;
 				float cy = height / 2.0f;
 				// Recipe book component is 147 wide plus a small gap when open.
-				int leftEdge = leftPos - 155 - 4;
-				int rightEdge = leftPos + panelRelX + EnderPocketLayout.PANEL_W + 4;
+				int leftEdge = (bookVisible ? leftPos - 155 : leftPos) - 4;
+				int rightEdge = leftPos + EnderPocketLayout.PANEL_REL_X + EnderPocketLayout.PANEL_W + 4;
 				float sRight = rightEdge > width - 2 ? (width - 2 - cx) / (rightEdge - cx) : 1.0f;
 				float sLeft = leftEdge < 2 ? (cx - 2) / (cx - leftEdge) : 1.0f;
-				float s = Math.clamp(Math.min(sRight, sLeft), 0.4f, 1.0f);
+				float sVert = panelBottom + 2 > height - 2 ? (height - 2 - cy) / (panelBottom + 2 - cy) : 1.0f;
+				float s = Math.clamp(Math.min(Math.min(sRight, sLeft), sVert), 0.4f, 1.0f);
 				tScrScale = s;
 				tScrTx = cx * (1.0f - s);
 				tScrTy = cy * (1.0f - s);
-			} else {
-				// Inventory untouched; shrink only the panel into the free space.
-				float available = width - 2 - (leftPos + panelRelX);
-				tPanScale = Math.clamp(available / EnderPocketLayout.PANEL_W, 0.5f, 1.0f);
 			}
 		}
 
@@ -139,8 +163,7 @@ public final class EnderPanelClient {
 		scrScale = ease(scrScale, tScrScale, k, 0.002f);
 		scrTx = ease(scrTx, tScrTx, k, 0.35f);
 		scrTy = ease(scrTy, tScrTy, k, 0.35f);
-		panScale = ease(panScale, tPanScale, k, 0.002f);
-		panTx = ease(panTx, tPanTx, k, 0.35f);
+		panTy = ease(panTy, tPanTy, k, 0.35f);
 	}
 
 	private static float ease(float cur, float target, float k, float snap) {
@@ -208,26 +231,26 @@ public final class EnderPanelClient {
 	// ---------------------------------------------------------------- panel tf
 
 	public static boolean panelTransformActive() {
-		return panScale < 0.9995f || Math.abs(panTx) > 0.01f;
+		return panScale < 0.9995f || Math.abs(panTy) > 0.01f;
 	}
 
 	public static float panelScale() {
 		return panScale;
 	}
 
-	public static float panelTx() {
-		return panTx;
+	public static float panelTy() {
+		return panTy;
 	}
 
 	/**
-	 * Push the panel-only transform (rightward step past the effect strip, then
-	 * scale about the anchor) in a pose that is already translated to the GUI
-	 * origin (the slot-drawing pose). No-op when the panel is at rest.
+	 * Push the panel-only transform (drop below the effect stack, then scale
+	 * about the anchor) in a pose that is already translated to the GUI origin
+	 * (the slot-drawing pose). No-op when the panel is at rest.
 	 */
 	public static void pushPanelRel(Matrix3x2fStack pose) {
 		if (panelTransformActive()) {
 			pose.pushMatrix();
-			pose.translate(ANCHOR_X + panTx, ANCHOR_Y);
+			pose.translate(ANCHOR_X, ANCHOR_Y + panTy);
 			pose.scale(panScale, panScale);
 			pose.translate(-ANCHOR_X, -ANCHOR_Y);
 		}
@@ -245,7 +268,7 @@ public final class EnderPanelClient {
 			float ax = leftPos + ANCHOR_X;
 			float ay = topPos + ANCHOR_Y;
 			pose.pushMatrix();
-			pose.translate(ax + panTx, ay);
+			pose.translate(ax, ay + panTy);
 			pose.scale(panScale, panScale);
 			pose.translate(-ax, -ay);
 		}
@@ -257,10 +280,10 @@ public final class EnderPanelClient {
 
 	/** Inverse panel mapping for GUI-relative coordinates. */
 	public static double invPanelRelX(double xRel) {
-		return ANCHOR_X + (xRel - panTx - ANCHOR_X) / panScale;
+		return ANCHOR_X + (xRel - ANCHOR_X) / panScale;
 	}
 
 	public static double invPanelRelY(double yRel) {
-		return ANCHOR_Y + (yRel - ANCHOR_Y) / panScale;
+		return ANCHOR_Y + (yRel - panTy - ANCHOR_Y) / panScale;
 	}
 }
